--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -4,18 +4,42 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>{{ folder }}</ion-title>
+    <ion-button shape="round" (click)="add()">add</ion-button>
   </ion-toolbar>
 </ion-header>
+<ion-content [fullscreen]="true" [scrollEvents]="true">
+  <ion-list>
+    <ion-item *ngFor="let item of items$ | async">
+      <ion-label class="ion-text-wrap">
+        {{item.id}}
+      </ion-label>
+      <ion-button slot="end" (click)="remove(item)">remove</ion-button>
+    </ion-item>
+  </ion-list>
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="fetch($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="caret-back-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button (click)="scrollToTop()">
+        <ion-icon name="chevron-up-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="scrollToBottom()">
+        <ion-icon name="chevron-down-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+
+
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
